--- a/Microsservicos_pratico01/pagamentos/src/main/resources/application.properties
+++ b/Microsservicos_pratico01/pagamentos/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://172.17.0.3/alurafood-pagamento?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Adison@7
+spring.jpa.show-sql=true
